Added Angular libraries and setup base html to accept Angular

--- a/app/index.html
+++ b/app/index.html
@@ -2,17 +2,23 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
-    <title>Ticket System</title>
+    <title>Ticketing System</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+    <!-- Angular libraries -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
+
+    <!-- Stylesheets -->
+
 </head>
 <body ng-app="ticketSys">
-<h1>Hi</h1>
 <ui-view>
 
 </ui-view>
 
 <!-- App JS -->
-<script src="js/ticketSys.module.js"></script>
+<script src="ticketSys/ticketSys.module.js"></script>
 
 </body>
 </html>
