Added feature modules for signin functionality

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
 
     <!-- Stylesheets -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+
 
 </head>
 <body ng-app="ticketSys">
@@ -19,6 +21,10 @@
 
 <!-- App JS -->
 <script src="ticketSys/ticketSys.module.js"></script>
+
+<script src="ticketSys/features/signin/signin.module.js"></script>
+<script src="ticketSys/features/signin/signin.controller.js"></script>
+<script src="ticketSys/features/signin/signin.route.js"></script>
 
 </body>
 </html>
