Added new ticket feature

--- a/app/index.html
+++ b/app/index.html
@@ -26,5 +26,13 @@
 <script src="ticketSys/features/signin/signin.controller.js"></script>
 <script src="ticketSys/features/signin/signin.route.js"></script>
 
+<script src="ticketSys/features/tickets/tickets.module.js"></script>
+<script src="ticketSys/features/tickets/tickets.controller.js"></script>
+<script src="ticketSys/features/tickets/tickets.route.js"></script>
+
+<script src="ticketSys/features/newTicket/newTicket.module.js"></script>
+<script src="ticketSys/features/newTicket/newTicket.controller.js"></script>
+<script src="ticketSys/features/newTicket/newTicket.route.js"></script>
+
 </body>
 </html>
