--- a/app/ticketSys/features/newTicket/newTicket.html
+++ b/app/ticketSys/features/newTicket/newTicket.html
@@ -1,18 +1,18 @@
 <div class="">
   <h1 class="">Add a New Ticket</h1>
 </div>
-<p class="bodyText">Please enter the details of your new property.</p>
+<p class="bodyText">Please enter the details of your new ticket.</p>
 <div class="list list-inset">
   <label class="item item-input">
-    <input type="text" name="title" placeholder="Title" ng-model="NewTicketVM.reqInfo.title">
+    <input type="text" name="title" placeholder="Title" ng-model="NewTicketVM.tixInfo.title">
   </label>
   <label class="item item-input">
-    <input type="text" name="description" placeholder="Description" ng-model="NewTicketVM.reqInfo.description">
+    <input type="text" name="body" placeholder="Body" ng-model="NewTicketVM.tixInfo.body">
   </label>
 </div>
 
 <button class="button button-default button-block center-button" ng-click="NewTicketVM.propContinue()">
-  ADD REQUEST
+  ADD TICKET
 </button>
 <br>
 <!--<p class="bodyText link" ui-sref="trequests">Return to Your Requests</p>-->
