Added feature to add new ticket

--- a/app/ticketSys/features/tickets/tickets.html
+++ b/app/ticketSys/features/tickets/tickets.html
@@ -6,7 +6,8 @@
     <div class="item item-text-wrap">
       <div class="col col-50">
         <h2 class="street">{{ticket.title}}</h2><br>
-        <h4 class="citystatezip">{{ticket.body}}</h4>
+        <h4 class="citystatezip">{{ticket.body}}</h4><br>
+        <h6 style="text-decoration:underline;">Edit Ticket</h6>
       </div>
       <div class="col col-50">
         <div ng-repeat="comment in ticket.comments">
